src/objects/MUSW__Plan_Check__c.object
<CustomObject>
    <description>Requirement Compliance of Site and Plans</description>
    <fields>
        <fullName>Coverage_Area_Requirement__c</fullName>
        <formula>CASE( MUSW__Parcel__r.MUSW__Primary_Zoning__c,
&quot;RR 1&quot;,2000,
null)</formula>
        <label>Coverage Area Maximum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Front_Requirement__c</fullName>
        <formula>CASE( MUSW__Parcel__r.MUSW__Primary_Zoning__c,
&quot;RR 1&quot;,50,
null)</formula>
        <label>Front Minimum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Height_Requirement__c</fullName>
        <formula>CASE( MUSW__Parcel__r.MUSW__Primary_Zoning__c,
&quot;RR 1&quot;,50,
null)</formula>
        <label>Height Maximum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Avg_Grade__c</fullName>
        <inlineHelpText>As measured between opposing property lines or run. Declines are negative</inlineHelpText>
        <label>Avg Grade</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MUSW__Coverage_Area__c</fullName>
        <label>Coverage Area</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Front_Setback__c</fullName>
        <inlineHelpText>Adjacent to access/main road</inlineHelpText>
        <label>Front</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Height__c</fullName>
        <inlineHelpText>As measured from the same place slope grade was measured</inlineHelpText>
        <label>Height</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Parcel__c</fullName>
        <label>Parcel</label>
        <referenceTo>MUSW__Parcel__c</referenceTo>
        <relationshipName>Requirements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MUSW__Parking__c</fullName>
        <inlineHelpText>Number of parking stalls</inlineHelpText>
        <label>Parking</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Permit2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Permit</label>
        <referenceTo>MUSW__Permit2__c</referenceTo>
        <relationshipLabel>Plan Checks</relationshipLabel>
        <relationshipName>Plan_Checks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Permit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Permit</label>
        <referenceTo>MUSW__Permit__c</referenceTo>
        <relationshipLabel>Plan Checks</relationshipLabel>
        <relationshipName>Plan_Checks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Rear_Setback__c</fullName>
        <inlineHelpText>Side opposite Front side</inlineHelpText>
        <label>Rear</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Side_1_Setback__c</fullName>
        <inlineHelpText>Left side when viewing from access road</inlineHelpText>
        <label>Side 1</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Side_2_Setback__c</fullName>
        <inlineHelpText>Right side when viewing from access road</inlineHelpText>
        <label>Side 2</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Proposal</fullName>
                    <default>true</default>
                    <label>New Proposal</label>
                </value>
                <value>
                    <fullName>Waiting</fullName>
                </value>
                <value>
                    <fullName>Corrections Required</fullName>
                </value>
                <value>
                    <fullName>Backcheck</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Addendum</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parking_Requirement__c</fullName>
        <formula>CASE( MUSW__Parcel__r.MUSW__Primary_Zoning__c,
&quot;RR 1&quot;,2,
null)</formula>
        <label>Parking Minimum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rear_Requirement__c</fullName>
        <formula>CASE( MUSW__Parcel__r.MUSW__Primary_Zoning__c,
&quot;RR 1&quot;,50,
null)</formula>
        <label>Rear Minimum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Side_1_Requirement__c</fullName>
        <formula>CASE( MUSW__Parcel__r.MUSW__Primary_Zoning__c,
&quot;RR 1&quot;,50,
null)</formula>
        <label>Side 1 Minimum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Side_2_Requirement__c</fullName>
        <formula>CASE( MUSW__Parcel__r.MUSW__Primary_Zoning__c,
&quot;RR 1&quot;,50,
null)</formula>
        <label>Side 2 Minimum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Plan Check</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plan Checks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>